--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/", "permanent": true }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
